Set modal screenshot image max-width 96% to prevent img overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,6 +133,10 @@ h4 {
 	max-width: 500px;
 }
 
+#modal-screenshot-img {
+	max-width: 96%;
+}
+
 /* Kanban cancelled checkbox */
 #hide-cancelled-checkbox {
 	font-size: 15px;
